--- a/front-end/mms-react/src/components/AdminHome.module.css
+++ b/front-end/mms-react/src/components/AdminHome.module.css
@@ -1,3 +1,30 @@
+.image {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-image: url("/home/shetty_sonit/manipal axis training/AxisMidProject/front-end/mms-react/src/components/images/Texas_A&M_Zachry_1.jpg");
+  filter: blur(7px);
+  /* -webkit-filter: blur(0px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.content {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  /* position: relative; */
+  /* position: absolute; */
+  z-index: 2;
+}
+
 .navbar {
   width: auto;
   text-align: right;
@@ -20,5 +47,5 @@
 .ulist1 {
   text-decoration: none;
   font-size: large;
-  margin: 50px;
+  margin: 10px;
 }
