--- a/front-end/mms-react/src/components/Home.module.css
+++ b/front-end/mms-react/src/components/Home.module.css
@@ -1,80 +1,73 @@
-.list1 {
-  text-decoration: none;
-  list-style: none;
-}
-
-.ulist1 {
-  text-decoration: none;
+.main {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  /* background-image: url("/home/shetty_sonit/manipal axis training/AxisMidProject/front-end/mms-react/src/components/images/Texas_A&M_Zachry_1.jpg"); */
+  background-image: url("/home/shetty_sonit/manipal axis training/AxisMidProject/front-end/mms-react/src/components/images/tamu-header-01b.jpg");
+  filter: blur(2px);
+  /* -webkit-filter: blur(0px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .header {
-  padding: 30px;
+  /* background-color: ; */
   text-align: center;
-  background: white;
+  padding: 18px;
 }
 
-.header h1 {
-  font-size: 50px;
-}
-
-.navbar {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.navbar a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 12px 15px;
-  text-decoration: none;
-}
-
-.navbar a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.navbar h4 {
-  float: right;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  text-decoration: none;
-  padding-right: 15px;
-  margin-top: 10px;
-}
-
-.main {
-  background-color: white;
-  padding: 20px;
-  margin: 20px 50px 20px 50px;
-  text-align: center;
-  border: 2px solid black;
-  border-radius: 5px;
-  height: 650px;
-}
-
-.main p {
-  margin-bottom: 25px;
+.row {
+  display: flex;
+  justify-content: center;
 }
 
 .column {
-  float: left;
-  width: 30%;
-  padding: 10px;
-  height: 300px;
-  border: 1px solid black;
-  border-radius: 5px;
-  margin: 17px;
+  flex: 50%;
+  padding: 30px;
+  text-align: justify;
 }
 
-.head {
-  margin: 8px;
-  padding: 5px;
-  font-style: italic;
+.footer {
+  background-color: #5f5f5f;
+  padding: 10px;
+  color: azure;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  text-align: center;
 }
 
 .content {
+  width: 20%;
+  height: 20%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 241px;
+  margin-bottom: 240px;
+  /* border: 2px solid rgba(0, 0, 0, 0.58); */
+  border-radius: 5px;
+  /* background-image: linear-gradient(
+    140deg,
+    #eadedb 0%,
+    #bc70a4 50%,
+    #bfd641 75%
+  ); */
+  /* background-image: linear-gradient(
+    140deg,
+    #d69dbf 0%,
+    #7072bcc7 50%,
+    #41d6b7e0 75%
+  ); */
+  background-color: blanchedalmond;
+}
+
+.card {
+  justify-content: center;
+  padding: 80px;
 }
