--- a/front-end/mms-react/src/components/StudentHome.module.css
+++ b/front-end/mms-react/src/components/StudentHome.module.css
@@ -1,12 +1,26 @@
-.column {
-  margin-top: 200px;
+.image {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-image: url("/home/shetty_sonit/manipal axis training/AxisMidProject/front-end/mms-react/src/components/images/1838.jpg");
+  filter: blur(5px);
+  /* -webkit-filter: blur(0px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
-.space {
-  margin: 4px;
-}
-.paysalary {
-  width: 50%;
+.content {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2;
 }
 
 .failstatus {
