--- a/front-end/mms-react/src/components/TeacherHome.module.css
+++ b/front-end/mms-react/src/components/TeacherHome.module.css
@@ -1,5 +1,26 @@
-.column {
-  margin-top: 200px;
+.image {
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-image: url("/home/shetty_sonit/manipal axis training/AxisMidProject/front-end/mms-react/src/components/images/Happy students learning in college flat vector illustration.jpg");
+  filter: blur(5px);
+  /* -webkit-filter: blur(0px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.content {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2;
 }
 
 .failstatus {
