--- a/front-end/mms-react/src/components/read/ReadStudent.module.css
+++ b/front-end/mms-react/src/components/read/ReadStudent.module.css
@@ -1,18 +1,44 @@
 .main {
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  background-color: #8dd9cc;
+  /* filter: blur(8px); */
+  /* -webkit-filter: blur(0px); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 .navbar {
-  width: 100%;
+  /* background-color: aquamarine; */
+  overflow: hidden;
+  background-color: none;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%; /* Full width */
   text-align: right;
   padding: 20px;
-  background-color: lightblue;
-  z-index: 1;
 }
 
 .status {
   text-transform: uppercase;
+}
+
+.content {
+  padding-top: 100px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.failStatus {
+  color: red;
+}
+
+.successStatus {
+  color: green;
 }
